# Relation-Extraction-Dataset-Finetuning

./: README.md  entity_extraction.ipynb  pyproject.toml  requirement.txt
EntityRelationExtraction/: README.md  setup.py
EntityRelationExtraction/EntityRelationExtraction/: __init__.py  driver.py  entity_extractor.py  format_helper.py  relation_clustering.py  relation_extraction.py
OpenNRE/benchmark/: download_fewrel.sh
OpenNRE/fewrel/: fewrel_train_rel2id.json  fewrel_val.txt
exp_week1/: data_parser.py  download_dataset.sh
notebooks/: 00-basic-hypothesis-validation.ipynb  Copy_of_entity_extraction.ipynb  Extract dictionaries.ipynb  entity_extraction_summarization_tryout.ipynb  entity_recognition_pos_tagging.ipynb  pipeline_complete.ipynb  simple_dict.txt
opennre.egg-info/: SOURCES.txt
