[tool.poetry]
name = "relation-extraction-dataset-finetuning"
version = "0.1.0"
description = "Exploring an alternative way to build relation extraction training examples."
authors = ["John Anthony Labarga <john.labarga@unilever.com>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.1"
nltk = "^3.7"
transformers = "^4.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
