[tool.poetry]
name = "relation-extraction-dataset-finetuning"
version = "0.1.0"
description = "Exploring an alternative way to build relation extraction training examples."
authors = ["John Anthony Labarga <john.labarga@unilever.com>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.0"
nltk = "^3.7"
pytest = "^7.1.3"
jupyter = "^1.0.0"
jupyterlab = "^3.4.7"
pymongo = "^4.2.0"
python-dotenv = "^0.21.0"
opennre = { git = "https://github.com/thunlp/OpenNRE.git"}
en_core_web_trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.4.0/en_core_web_trf-3.4.0-py3-none-any.whl"}
transformers = "4.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
